fix featured blog overflow on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 
 .flexbox {
   display: flex;
-  padding-top: 20px;
+  padding-top: 10px;
   flex-wrap: wrap;
 }
 
@@ -67,7 +67,7 @@ nav a:hover {
   background: url(../assets/images/hero.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  width: 100%;
+  max-width: 100%;
   height: 100vh;
   position: relative;
 }
@@ -101,7 +101,7 @@ nav a:hover {
   color: black;
 }
 
-/* blog section */
+/* featured blog section */
 #blog {
   margin: 0 auto;
   padding: 20px 8px;
@@ -116,12 +116,18 @@ nav a:hover {
 }
 
 .featuredBlog {
-  padding: 0 3px;
-  width: 400px;
+  padding: 5px;
+  max-width: 360px;
 }
 
 .featuredBlog h3 {
   color: #009bad;
+  padding-left: 5px;
+}
+
+.featuredBlog img {
+  max-width: 360px;
+  max-height: 270px;
 }
 
 div a {
@@ -131,7 +137,7 @@ div a {
 
 .blog-excerpt {
   text-align: justify;
-  padding: 0 5% 0 0;
+  padding: 5px;
   color: #222222;
 }
 
@@ -139,6 +145,7 @@ div a {
   font-weight: bold;
   color: #009bad;
   font-size: 17px;
+  padding-left: 5px;
 }
 
 .read-more a:hover {
